# asr-c

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  wasm32-wasi-clang-toolchain.cmake
asr/: CMakeLists.txt  asr.h  asr.syms
asr_asl/: CMakeLists.txt  Readme.md  asl.c  asl.h
asr_utils/: CMakeLists.txt  Readme.md  asr_utils.h
asr_utils/asr_utils/: asr_extensions.cpp  asr_extensions.h  mem_watcher.h  pch.h  pointer.cpp  pointer.h  process_info.cpp  process_info.h  read_mem.cpp  read_mem.h  sigscan.cpp  sigscan.h  variable.h
asr_utils/utils/: asr_extensions.cpp  asr_extensions.h  mem_watcher.cpp  mem_watcher.h  pch.h  pointer.cpp  pointer.h  process_info.cpp  process_info.h  read_mem.cpp  read_mem.h  sigscan.cpp  sigscan.h  variable.cpp  variable.h
hello_world/: CMakeLists.txt  main.c
